--- a/231111_실습_[Pytorch]LSTM101_Stock_Price_Prediction.ipynb
+++ b/231111_실습_[Pytorch]LSTM101_Stock_Price_Prediction.ipynb
@@ -2068,11 +2068,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "mAkmGu1j0l8M"
+        "id": "mAkmGu1j0l8M",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 148
+        },
+        "outputId": "648a89b3-d301-4e31-94d5-0890b46045a2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-e2e14b3e26f4>\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    def forward(self, x, (h0, c0)): # (N, L H_in)\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
         "class LSTM(nn.Module):\n",
         "    # # 기본변수, layer를 초기화해주는 생성자\n",
@@ -2089,15 +2103,110 @@
         "                            num_layers=n_layers,\n",
         "                            batch_first=True,\n",
         "                            dropout=0.1,    # hidden layer의 node중에 일부를 deactivate 시킴.\n",
-        "                            bidirectional=False)      # Why\n",
+        "                            bidirectional=False)\n",
         "\n",
         "        self.fc = nn.Linear(in_features=hidden_dim,\n",
-        "                            out_features=output_dim)\n",
+        "                            out_features=output_dim)  # Why\n",
         "\n",
         "    # 예측을 위한 함수\n",
-        "    def forward(self, x):\n",
+        "    def forward(self, x, (h0, c0)): # (N, L H_in)\n",
+        "        # (n_layers, batch_size, hidden_dim)\n",
+        "        h0 = torch.zeros(self.n_layers, x.size(0), self.hidden_dim)\n",
+        "        c0 = torch.zeros(self.n_layers, x.size(0), self.hidden_dim)\n",
+        "        # input : (x, (h0, c0))\n",
+        "        # output : (x, (hn, cn))\n",
+        "        x, (hn, cn) = self.lstm(x, (h0, c0)) # (N, L, H_in) -- (LSTM) --> (N, L, H_out)\n",
+        "        # e.g. (batch_size, seq_len, hidden_dim)\n",
+        "        ## 마지막 출력 결과(last_hidden_state) --> (batch_size, hidden_dim)\n",
+        "        # e.g. (32, 30, 4) --> (32, 30, 10)\n",
+        "        ## 마지막 출력결과(last_hidden_state) --> (32, 10)\n",
+        "        x = self.fc(x[:, -1, :]) # (batch_size, hidden_dim) --> (batch_size, outpu_dim) # (32, 10) ==> (32, 1) ## weighted sum ==> Linear Regression\n",
+        "        return x, (hn, cn)\n",
         "\n",
-        "        return x"
+        "        # h0 = zero vec\n",
+        "        # c0 = zero vec\n",
+        "        # # input : (x, (h0, c0))\n",
+        "        # # output : (x, (hn, cn))\n",
+        "\n",
+        "        # x, (hn, cn) = self.lstm(x, (h0, c0))\n",
+        "        # x = self.fc(last hidden state)\n",
+        "\n",
+        "        # return x, (hn, cn)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tX, ty = next(iter(trainloader))\n",
+        "tX.shape, ty.shape # (batch_size, seq_len, input_dim) ## (N, L, H_in)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oYn9CY5hXexl",
+        "outputId": "1c197f4c-e783-4e89-ba94-07375f2c14ca"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([32, 30, 4]), torch.Size([32]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# rnn = nn.LSTM(10, 20, 2) # (L, N, H_in)\n",
+        "model = LSTM(input_dim=4,\n",
+        "             hidden_dim=10,\n",
+        "             seq_len=30,\n",
+        "             output_dim=1,\n",
+        "             n_layers=1)\n",
+        "# input = torch.randn(5, 3, 10) # (L, N, H_in)\n",
+        "h0 = torch.randn(1, batch_size, 10) # (n_layers, batch_size, hidden_dim)\n",
+        "c0 = torch.randn(1, batch_size, 10)\n",
+        "output, (hn, cn) = model(tX, (h0, c0))\n",
+        "print(output.shape, hn.shape, cn.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 451
+        },
+        "id": "uakvDM0dW-eR",
+        "outputId": "ad413b3c-415e-421a-a5d6-8761bae1af94"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/rnn.py:82: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.1 and num_layers=1\n",
+            "  warnings.warn(\"dropout option adds dropout after all but last \"\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-31-f3b97bc525b5>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mh0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# (n_layers, batch_size, hidden_dim)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mc0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcn\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mh0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_compiled_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[misc]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1517\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1518\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1519\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1520\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1525\u001b[0m                 \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_pre_hooks\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_hooks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1526\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1528\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1529\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: LSTM.forward() takes 2 positional arguments but 3 were given"
+          ]
+        }
       ]
     },
     {
@@ -2107,10 +2216,22 @@
         "print(device)"
       ],
       "metadata": {
-        "id": "he7U5raomF3d"
+        "id": "he7U5raomF3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7025df45-c3bf-4358-a894-1aaae07a9b13"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cuda:0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
